--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,9 @@ author:
   avatar           : "profile.png"
   name             : "Yukun(Alex) Hao"
   pronouns         : #"she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "PhD in Bioengenieering
+  
+  BS in Mechanics"
   location         : "Palo Alto"
   employer         : "Stanford University"
   uri              : # URL
