--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Yukun(Alex) Hao"
   pronouns         : #"she/her"  
-  bio              : "PhD in Bioengenieering
-  
-  BS in Mechanics"
+  bio              : "Ready for new challenges!"
   employer         : "Stanford University"
   uri              : # URL
   # Academic websites
