--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,6 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Presentations"
+  - title: "Conference"
     url: /talks/    
    
